--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "push-pserver": "rollup -c --environment DEST:pserver",
     "push-season": "rollup -c --environment DEST:season",
     "push-sim": "rollup -c --environment DEST:sim",
-    "test": "npm run test-unit",
+    "test": "jest",
+    "test-coverage": "jest --coverage",
     "test-unit": "mocha test/unit/**/*.ts",
     "test-integration": "echo 'See docs/in-depth/testing.md for instructions on enabling integration tests'",
     "watch-main": "rollup -cw --environment DEST:main",
@@ -36,10 +37,12 @@
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@types/chai": "^4.1.6",
+    "@types/jest": "^26.0.22",
     "@types/lodash": "3.10.2",
     "@types/mocha": "^5.2.5",
     "@types/node": "^13.13.1",
     "@types/screeps": "^3.2.3",
+    "@types/screeps-profiler": "^1.2.2",
     "@types/sinon": "^5.0.5",
     "@types/sinon-chai": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -51,6 +54,7 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^26.6.3",
     "lodash": "^3.10.1",
     "mocha": "^5.2.0",
     "prettier": "^2.3.2",
@@ -58,13 +62,17 @@
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-screeps": "^1.0.1",
     "rollup-plugin-typescript2": "^0.30.0",
+    "screeps-jest": "github:eduter/screeps-jest#1.3.1",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "^10.2.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "source-map": "~0.6.1"
+    "screeps-profiler": "^2.0.1",
+    "source-map": "~0.6.1",
+    "typed-screeps": "^2.5.3"
   }
 }
